--- a/package.json
+++ b/package.json
@@ -5,13 +5,14 @@
   "main": "app.js",
   "dependencies": {
     "axios": "^0.13.1",
+    "cors": "2.8.3",
     "express": "^4.15.3",
     "fs": "^0.0.1-security",
     "hbs": "^4.0.1",
     "nodemon": "^1.11.0",
     "request": "^2.81.0",
-    "yargs": "^4.8.1",
-    "cors": "2.8.3"
+    "socket.io": "^2.0.2",
+    "yargs": "^4.8.1"
   },
   "devDependencies": {},
   "scripts": {
