--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "express": "^4.15.3",
     "fs": "^0.0.1-security",
     "hbs": "^4.0.1",
+    "middleware-proxy": "^2.0.2",
     "nodemon": "^1.11.0",
     "request": "^2.81.0",
     "socket.io": "^2.0.2",
