--- a/package.json
+++ b/package.json
@@ -11,11 +11,14 @@
     "hbs": "^4.0.1",
     "middleware-proxy": "^2.0.2",
     "nodemon": "^1.11.0",
+    "path": "^0.12.7",
     "request": "^2.81.0",
     "socket.io": "^2.0.2",
     "yargs": "^4.8.1"
   },
-  "devDependencies": {},
+  "devDependencies": {
+    "http-proxy-middleware": "^0.17.4"
+  },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node server.js"
