--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "app.js",
   "dependencies": {
     "axios": "^0.13.1",
-    "cors": "2.8.3",
+    "cors": "^2.8.3",
     "express": "^4.15.3",
     "fs": "^0.0.1-security",
     "hbs": "^4.0.1",
